fixed text overflow at bottom of header for 768 breakpoint. adjusted some hardcoded padding to be percentages.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* global styles */
+
 * {
   padding:0;
   margin:0;
@@ -8,34 +10,36 @@ body {
   font-size: 16.5px;
 }
 
+.checkerboard {
+  background-image: url(../images/vichy.png);
+}
+
 .education-entry, .work-entry, .project-entry {
   padding-left: 5%;
   padding-right: 5%;
 }
 
 .header {
-  padding-top: 30px;
-  height: 280px;
+  padding-top: 2%;
+  padding-bottom: 5%;
+  height: 15%;
+  /*height: 280px;*/
   background-color: #ededed;
 }
 
-.checkerboard {
-  background-image: url(../images/vichy.png);
-}
-
 h1 {
-  padding:10px;
+  padding:2%;
   padding-left: 5%;
   display: inline;
   color: #3300cc;
   font-family: 'Rozha One', serif;
-  font-size: 40px;
-  line-height: 48px;
+  font-size: 34px;
+  line-height: 38px;
 }
 
 h2 {
   margin: 0;
-  padding-top:15px;
+  padding-top:2%;
   padding-right: 5%;
   padding-bottom: 5px;
   padding-left: 5%;
@@ -187,7 +191,7 @@ a:active, a:hover {
 
 .center-content {
   margin: 0 auto;
-  padding-bottom: 1%;
+  /*padding-bottom: 1%;*/
 }
 
 .center-text {
@@ -325,6 +329,11 @@ div.gm-style-iw > div > div {
 
   .navbar {
     border-radius: 0;
+  }
+
+  h1 {
+    font-size: 40px;
+    line-height: 48px;
   }
 }
 
